--- a/KEN_NFC_NEW.Android/KEN_NFC_NEW.Android.csproj
+++ b/KEN_NFC_NEW.Android/KEN_NFC_NEW.Android.csproj
@@ -54,6 +54,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs.Extended">
+      <Version>1.0.11</Version>
+    </PackageReference>
     <PackageReference Include="Plugin.NFC">
       <Version>0.1.26</Version>
     </PackageReference>
