--- a/KEN_NFC_NEW.iOS/KEN_NFC_NEW.iOS.csproj
+++ b/KEN_NFC_NEW.iOS/KEN_NFC_NEW.iOS.csproj
@@ -123,11 +123,14 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs.Extended">
+      <Version>1.0.11</Version>
+    </PackageReference>
     <PackageReference Include="Plugin.NFC">
       <Version>0.1.26</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
     <PackageReference Include="ZXing.Net.Mobile">
       <Version>2.4.1</Version>
     </PackageReference>
