--- a/KEN_NFC_NEW/KEN_NFC_NEW.csproj
+++ b/KEN_NFC_NEW/KEN_NFC_NEW.csproj
@@ -11,9 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs.Extended" Version="1.0.11" />
     <PackageReference Include="Plugin.NFC" Version="0.1.26" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
     <PackageReference Include="ZXing.Net.Mobile" Version="2.4.1" />
     <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.4.1" />
   </ItemGroup>
