ken send app test

--- a/KEN_NFC_NEW/KEN_NFC_NEW.csproj
+++ b/KEN_NFC_NEW/KEN_NFC_NEW.csproj
@@ -13,6 +13,8 @@
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs.Extended" Version="1.0.11" />
     <PackageReference Include="Plugin.NFC" Version="0.1.26" />
+    <PackageReference Include="Plugin.Permissions" Version="6.0.1" />
+    <PackageReference Include="Rg.Plugins.Popup" Version="2.1.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
     <PackageReference Include="ZXing.Net.Mobile" Version="2.4.1" />
@@ -20,6 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="ReplacePopup.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="ScannerPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
