--- a/KEN_NFC_NEW.iOS/KEN_NFC_NEW.iOS.csproj
+++ b/KEN_NFC_NEW.iOS/KEN_NFC_NEW.iOS.csproj
@@ -129,6 +129,12 @@
     <PackageReference Include="Plugin.NFC">
       <Version>0.1.26</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.Permissions">
+      <Version>6.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>2.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
     <PackageReference Include="ZXing.Net.Mobile">
