--- a/KEN_NFC_NEW.Android/KEN_NFC_NEW.Android.csproj
+++ b/KEN_NFC_NEW.Android/KEN_NFC_NEW.Android.csproj
@@ -61,6 +61,9 @@
     <PackageReference Include="Acr.UserDialogs.Extended">
       <Version>1.0.11</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.FileIO">
+      <Version>1.1.3</Version>
+    </PackageReference>
     <PackageReference Include="Plugin.NFC">
       <Version>0.1.26</Version>
     </PackageReference>
@@ -77,6 +80,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileService.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
