--- a/KEN_NFC_NEW.iOS/KEN_NFC_NEW.iOS.csproj
+++ b/KEN_NFC_NEW.iOS/KEN_NFC_NEW.iOS.csproj
@@ -126,6 +126,9 @@
     <PackageReference Include="Acr.UserDialogs.Extended">
       <Version>1.0.11</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.FileIO">
+      <Version>1.1.3</Version>
+    </PackageReference>
     <PackageReference Include="Plugin.NFC">
       <Version>0.1.26</Version>
     </PackageReference>
@@ -135,7 +138,7 @@
     <PackageReference Include="Rg.Plugins.Popup">
       <Version>2.1.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2515" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
     <PackageReference Include="ZXing.Net.Mobile">
       <Version>2.4.1</Version>
