--- a/KEN_NFC_NEW/KEN_NFC_NEW.csproj
+++ b/KEN_NFC_NEW/KEN_NFC_NEW.csproj
@@ -7,6 +7,7 @@
     <Authors>KEN</Authors>
     <Product>KEN_NFC</Product>
     <AssemblyName>KEN_NFC</AssemblyName>
+    <ApplicationIcon>ico.ico</ApplicationIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
